--- a/layout/_headers.scss
+++ b/layout/_headers.scss
@@ -4,7 +4,6 @@ header {
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    background-color: white;
   
     .logo {
         display: flex;
