--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,6 @@
 }
 
 
-
 main {
     .description-website {
         height: 200px;
@@ -27,7 +26,7 @@ main {
         align-items: center;
         justify-content: space-evenly;
         text-align: center;
-        padding: 1rem;
+        padding: 1rem 0 1rem 0;
 
         .description-text-container {
             display: flex;
@@ -94,7 +93,7 @@ main {
                 justify-content: flex-start;
                 background-color: var(--main-bg-color);
                 border-radius: 25px;
-                width: 90vw;
+                width: 90%;
                 height: 40px;
                 gap: 10px;
                 box-shadow: 0 3px 3px lightgrey;
@@ -131,13 +130,13 @@ main {
 
         h1 {
             margin-top: 2rem;
-            width: 90%;
+            width: 100%;
             font-weight: bold;
         }
 
         a {
             display: block;
-            color:inherit;
+            color: inherit;
             text-decoration: none
         }
 
@@ -215,8 +214,14 @@ footer {
     justify-content: space-between;
     flex-direction: column;
     height: 150px;
-    width: 100vw;
-    padding: 1rem;
+    width: 100%;
+    padding: 1rem 0 1rem 0;
+    .text-container{
+        display:flex;
+        flex-direction:reverse-row;
+        gap: 1rem;
+        padding:10px
+    }
 
     .logo {
         font-family: "Shrikhand", serif;
@@ -245,7 +250,7 @@ footer {
 }
 
 
-@media (min-width:600px) {
+@media (min-width:900px) {
     body {
         align-items: center;
         justify-content: center;
@@ -254,11 +259,11 @@ footer {
 
         header {
             width: 100%;
-            
+
         }
 
         main {
-            width: 100vw;
+            width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -270,10 +275,10 @@ footer {
 
             .functioning {
                 display: flex;
-                width: 100vw;
+                width: 100%;
                 align-items: center;
                 justify-content: center;
-                height: 20vh;
+                height: 150px;
 
                 h1 {
                     width: 65vw;
@@ -291,7 +296,17 @@ footer {
             }
 
             .restaurants {
-                width: 75vw;
+                width: 75%;
+
+                .restaurant-container {
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    flex-wrap: wrap;
+                    align-items: center;
+                    gap: 1rem;
+
+                }
 
                 .restaurant-card {
                     width: 36vw;
